--- a/app/src/main/res/layout/activity_new_test.xml
+++ b/app/src/main/res/layout/activity_new_test.xml
@@ -7,49 +7,26 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/connect_msg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <Button
-        android:id="@+id/connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="测试Http"/>
-
-    <Button
-        android:id="@+id/testAddFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="新增文件"/>
-
-    <Button
-        android:id="@+id/testDelFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="删除所有文件"/>
-
-    <Button
-        android:id="@+id/to_test1"
+        android:id="@+id/to_main1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="toMain_startActivity" />
 
     <Button
-        android:id="@+id/to_test2"
+        android:id="@+id/to_main2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="toMain_startActivity" />
 
     <Button
-        android:id="@+id/to_test3"
+        android:id="@+id/to_main3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="toMain_startActivityF" />
 
     <Button
-        android:id="@+id/to_test4"
+        android:id="@+id/to_main4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="toMain_startActivityF" />
